<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cn.suhoan</groupId>
    <artifactId>anaxa</artifactId>
    <version>1.1</version>
    <packaging>pom</packaging>
    <name>AnaxaDB</name>

    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>manual</distribution>
        </license>
    </licenses>
    <developers>
        <developer>
            <id>1</id>
            <name>Wang Zefeng</name>
            <email>sihuangwlp@petalmail.com</email>
            <url>https://suhoan.cn</url>
            <roles>
                <role>owner</role>
            </roles>
            <timezone>Asia/Shanghai</timezone>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:https://github.com/FuturePrayer/anaxa.git</connection>
        <developerConnection/>
        <tag/>
        <url>https://github.com/FuturePrayer/anaxa</url>
    </scm>

    <modules>
        <module>anaxa-common</module>
        <module>anaxa-sdk</module>
        <module>anaxa-index</module>
        <module>anaxa-storage</module>
        <module>anaxa-engine</module>
        <module>anaxa-server</module>
        <module>anaxa-benchmark</module>
    </modules>

    <properties>
        <maven.compiler.release>26</maven.compiler.release>
        <maven.compiler.parameters>true</maven.compiler.parameters>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jackson.version>3.1.2</jackson.version>
        <junit.version>6.0.3</junit.version>
        <slf4j.version>2.0.17</slf4j.version>
        <preview.argLine>--enable-preview</preview.argLine>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>tools.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.15.0</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                        <parameters>${maven.compiler.parameters}</parameters>
                        <compilerArgs>
                            <arg>--enable-preview</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.5</version>
                    <configuration>
                        <argLine>${preview.argLine}</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
